Check if placing 'Sign Up' in span tags resolves invisibility error

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -236,8 +236,8 @@ a:active {
   text-align: center;
 }
 
-.footer a {
-  color: var(--link);
+a {
+  color: var(--dark-green);
 }
 
 .hello-user {
